// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Init About 1`] = `
<div
  className="about-container"
>
  <h1>
    About Page
  </h1>
  <p>
    StormShelters is an application that can provide those in Harris County that have been affected by natural disasters with resources for help and shelter. The website provides information on the different cities in the county, the disasters they were struck by, and different shelter locations nearby. Data sources used: Yelp, FEMA, Wikipedia, Census. Tools used: GitLab repository with CI/CD, Visual Studio Code, JavaScript, HTML/CSS, Postman, Bootstrap Through our research, we have found interesting correlations between data we didn't realize was so closely connected. The most interesting realization was how shelters were concentrated near the areas where many storms take place.
  </p>
  <div
    className="team-members-container"
  />
  <div
    className="statistics"
  >
    <p>
      Total commits: 0
    </p>
    <p>
      Total issues: 0
    </p>
  </div>
  <div
    className="center-text"
  >
    <br />
    <a
      href="https://documenter.getpostman.com/view/29974721/2s9YR6aDwG"
    >
      API Documentation
    </a>
    <br />
    <a
      href="https://gitlab.com/cs373-group5/stormshelters"
    >
      GitLab Repository
    </a>
  </div>
  <div
    className="text-left"
  >
    <br />
    <h2>
      Tools Used:
    </h2>
    <ul>
      <li>
        VS Code: Integrated Development Environment
      </li>
      <li>
        Zoom: Remote collaboration
      </li>
      <li>
        Namecheap: Domain name registration
      </li>
      <li>
        Route 53: Domain name resolution
      </li>
      <li>
        AWS Amplify: Frontend server hosting
      </li>
      <li>
        AWS EC2: Backend server hosting
      </li>
      <li>
        AWS RDS: Database hosting
      </li>
      <li>
        Postman: API Documentation
      </li>
      <li>
        Selenium/Jest: Testing Frameworks
      </li>
    </ul>
    <h2>
      Data sources:
    </h2>
    <ul>
      <li>
        <a
          href="http://api.weatherapi.com/v1/forecast.json"
        >
          Weather API
        </a>
      </li>
      <li>
        <a
          href="https://fusion.yelp.com"
        >
          Yelp Fusion
        </a>
      </li>
      <li>
        <a
          href="https://developers.google.com/maps/documentation/geocoding/overview"
        >
          GeoCoding API
        </a>
      </li>
      <li>
        <a
          href="https://www.geoapify.com/geocoding-api"
        >
          GeoApify
        </a>
      </li>
    </ul>
    <p>
      Each of these sites provides a RESTful API. For Phase 1, we first analyzed the documentation to find the appropriate endpoints. Then, we scraped the data using a curl request and filtered the data by hand to find the appropriate information. Finally, we added the data to a JSON file so that it could be re-used across different pages.
    </p>
    <br />
  </div>
</div>
`;

exports[`Init App 1`] = `
Array [
  <nav
    className="navbar"
  >
    <ul
      className="nav-list"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/"
        >
          StormShelters
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/about"
        >
          About
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/cities"
        >
          Cities
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/shelter"
        >
          Shelter & Relief
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/pharmacies"
        >
          Pharmacies
        </a>
      </li>
    </ul>
  </nav>,
  <div
    className="home-container"
  >
    <div
      className="bg"
    >
      <div
        className="text-container"
      >
        <h1>
          Prepare for the Storms.
        </h1>
        <button
          className="button"
          id="scrollButton"
        >
          Find Resources
        </button>
      </div>
    </div>
    <div
      className="shelter-card-container"
      id="shelterCardContainer"
    >
      <a
        href="/cities"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          className="shelter-card"
        >
          <img
            alt="Food and Pharmacies Image"
            class="shelter-image-container"
            src="https://ane4bf-datap1.s3-eu-west-1.amazonaws.com/wmocms/s3fs-public/styles/featured_media_detail/public/23613146140_6edfea579f_k.jpg?m0oNCnmjJAswk0CJrWZ.iW.ge6XbrfR1&itok=YBQjaq77"
          />
          <div
            className="shelter-card-body"
          >
            <h3
              className="shelter-card-title"
            >
              Cities
            </h3>
            <p>
              View the weather conditions of your city to see if a storm is in the forecast.
            </p>
          </div>
          <div
            className="button-container"
          />
        </div>
      </a>
      <a
        href="/shelter"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          className="shelter-card"
        >
          <img
            class="shelter-image-container"
            src="https://i.cbc.ca/1.5499955.1584413818!/fileImage/httpImage/image.jpg_gen/derivatives/16x9_780/welcome-inn.jpg"
          />
          <div
            className="shelter-card-body"
          >
            <h3
              className="shelter-card-title"
            >
              Shelters & Food
            </h3>
            <p>
              View the areas to take refuge in Harris County and the highest-rated locations where you can stock up for the next storm or replenish your supplies while you recover. Filter by address to find the most convenient location for you.
            </p>
          </div>
          <div
            className="button-container"
          />
        </div>
      </a>
      <a
        href="/pharmacies"
        onClick={[Function]}
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <div
          className="shelter-card"
        >
          <img
            alt="Pharmacy Image"
            class="shelter-image-container"
            src="https://medicopharmacyrx.com/wp-content/uploads/2021/07/types-of-pharmacy.jpg"
          />
          <div
            className="shelter-card-body"
          >
            <h3
              className="shelter-card-title"
            >
              Pharmacies
            </h3>
            <p>
              Find where you can purchase essential medical supplies closest to you.
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>,
]
`;

exports[`Init HomeCard 1`] = `
<div
  className="home-container"
>
  <div
    className="bg"
  >
    <div
      className="text-container"
    >
      <h1>
        Prepare for the Storms.
      </h1>
      <button
        className="button"
        id="scrollButton"
      >
        Find Resources
      </button>
    </div>
  </div>
  <div
    className="shelter-card-container"
    id="shelterCardContainer"
  >
    <a
      href="/cities"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <div
        className="shelter-card"
      >
        <img
          alt="Food and Pharmacies Image"
          class="shelter-image-container"
          src="https://ane4bf-datap1.s3-eu-west-1.amazonaws.com/wmocms/s3fs-public/styles/featured_media_detail/public/23613146140_6edfea579f_k.jpg?m0oNCnmjJAswk0CJrWZ.iW.ge6XbrfR1&itok=YBQjaq77"
        />
        <div
          className="shelter-card-body"
        >
          <h3
            className="shelter-card-title"
          >
            Cities
          </h3>
          <p>
            View the weather conditions of your city to see if a storm is in the forecast.
          </p>
        </div>
        <div
          className="button-container"
        />
      </div>
    </a>
    <a
      href="/shelter"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <div
        className="shelter-card"
      >
        <img
          class="shelter-image-container"
          src="https://i.cbc.ca/1.5499955.1584413818!/fileImage/httpImage/image.jpg_gen/derivatives/16x9_780/welcome-inn.jpg"
        />
        <div
          className="shelter-card-body"
        >
          <h3
            className="shelter-card-title"
          >
            Shelters & Food
          </h3>
          <p>
            View the areas to take refuge in Harris County and the highest-rated locations where you can stock up for the next storm or replenish your supplies while you recover. Filter by address to find the most convenient location for you.
          </p>
        </div>
        <div
          className="button-container"
        />
      </div>
    </a>
    <a
      href="/pharmacies"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <div
        className="shelter-card"
      >
        <img
          alt="Pharmacy Image"
          class="shelter-image-container"
          src="https://medicopharmacyrx.com/wp-content/uploads/2021/07/types-of-pharmacy.jpg"
        />
        <div
          className="shelter-card-body"
        >
          <h3
            className="shelter-card-title"
          >
            Pharmacies
          </h3>
          <p>
            Find where you can purchase essential medical supplies closest to you.
          </p>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Init NavBar 1`] = `
<nav
  className="navbar"
>
  <ul
    className="nav-list"
  >
    <li
      className="nav-item"
    >
      <a
        className="nav-link"
        href="/"
      >
        StormShelters
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link"
        href="/about"
      >
        About
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link"
        href="/cities"
      >
        Cities
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link"
        href="/shelter"
      >
        Shelter & Relief
      </a>
    </li>
    <li
      className="nav-item"
    >
      <a
        className="nav-link"
        href="/pharmacies"
      >
        Pharmacies
      </a>
    </li>
  </ul>
</nav>
`;
